Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-84556

[REG 5.14-5.15] Video Element with 'autoLoad: false' doesn't play UDP stream after calling play()

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.15.1
    • 5.15.0
    • Multimedia
    • None
    • All
    • 19cc3a018f2442221d566ec56bda2bdbdce7ec2e (qt/qtmultimedia/dev) 099bddad51d0924a3f1c8a4271754e5cc3d964a7 (qt/qtmultimedia/5.15)

      The following application will correctly play an H264 UDP video stream sent to localhost:5000 on 5.14 but the video never shows on 5.15

      import QtQuick 2.12
      import QtQuick.Window 2.12
      import QtMultimedia 5.12
      
      Window {
          visible: true
          width: 640
          height: 480
          title: qsTr("UDP Video Receiver")
      
          Video {
              id: video
              anchors.fill: parent
              fillMode: Image.PreserveAspectFit
              source: "gst-pipeline: udpsrc port=5000 ! application/x-rtp,payload=96 ! rtph264depay ! avdec_h264 ! qtvideosink"
              autoLoad: false
          }
      
          Component.onCompleted: {
              video.play()
          }
      }
      

      Using 'autoPlay: false' instead of 'autoLoad: false' makes it work in 5.15 as well but this is a regression to prior behavior.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            valentyn.doroshchuk Valentyn Doroshchuk
            aamann aamann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes