GStreamer: Start playback when buffered

Regression since d8d072417b08dd75734b3f0aa86c3a49db934770

Fixes: QTBUG-84556
Change-Id: I557ac7eb38ebdbb6c52e5348902ee8c3f1a91f07
Reviewed-by: <roman.valov@gmail.com>
Reviewed-by: Andy Shaw <andy.shaw@qt.io>
(cherry picked from commit 19cc3a018f2442221d566ec56bda2bdbdce7ec2e)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>